# metaTOR

./: .codecov.yml  .dockerignore  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  Singularity  Singularity.2d61edd  TUTORIAL.md  alignment.sh  annotation.sh  binning.sh  bins.py  config_template.sh  deploy.sh  distance  distance.go  distance_win  environment.sh  fasta_utils.py  figures.py  hicstuff.py  log.py  meta3c.sh  metator.yaml  mge_mag_interactions.tsv  network.py  nf-metator.def  partition.sh  pipeline.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  pypi-publish.yml  python-package.yml  release.yml
doc/: Makefile  TUTORIAL.md  conf.py  environment.yml  index.rst  make.bat  requirements.txt
doc/api/: metator.rst  metator.scripts.rst  modules.rst
docs/: environment.yml  requirements.txt
docs/example/: MAG_visualization_and_scaffolding.md  manual_curation_of_metator_MAGs.md  metator_tutorial.md
docs/source/: conf.py  index.rst
example/: MAG_visualization_and_scaffolding.md  manual_curation_of_metator_MAGs.md  metator_tutorial.md
metator/: __init__.py  align.py  commands.py  contact_map.py  cutsite.py  figures.py  host.py  io.py  log.py  main.py  metator.py  network.py  partition.py  quality_check.py  regions.py  scaffold.py  validation.py  view.py
metator/data/: hmm_databases.tgz
metator/scripts/: bins.py  fasta_utils.py  figures.py  hamming.py  hicstuff.py  log.py  network.py
src/metator/: __init__.py  align.py  commands.py  contact_map.py  figures.py  host.py  host_ghislaine.py  io.py  log.py  main.py  mge.py  network.py  partition.py  quality_check.py  regions.py  validation.py  version.py
tests/: __init__.py  test_align.py  test_commands.py  test_figures.py  test_host.py  test_io.py  test_mge.py  test_network.py  test_partition.py  test_quality_check.py  test_validation.py
tests_data/: assembly.2.bt2  assembly.3.bt2  assembly.4.bt2  assembly.fa  assembly.fa.fxi  assembly.rev.2.bt2  binning.txt  contig_data_final.txt  contig_data_network.txt  contig_data_partition.txt  depth.txt  mges.txt  selected_contigs.txt  subset.mges.txt  subset.pairs.gz.px2
tests_data/host_test_data/: bin_summary.txt  contig_data_final.txt  mges_bin_summary.tsv
tests_data/outdir/: MetaTOR_11_0.fa  MetaTOR_1_0.fa  MetaTOR_29_0.fa  MetaTOR_2_0.fa  MetaTOR_31_0.fa  MetaTOR_3_0.fa  MetaTOR_5_0.fa  MetaTOR_6_0.fa  MetaTOR_7_0.fa  MetaTOR_8_0.fa  MetaTOR_98_0.fa  alignment.bed  alignment.pairs  alignment_sorted.pairs.gz.px2  bin_summary.txt  contig_data_final.txt  contig_data_network.txt  contig_data_partition.txt  network.txt  pairs.txt
tests_data/outdir2/: bin_summary.txt  binning.txt  contig_data_network.txt  contig_data_partition.txt  contig_data_recursif.txt  network.txt  overlapping_checkm_taxonomy.txt
tests_data/outdir_checkM/: overlapping_checkm_results.txt  recursif_checkm_results.txt  recursif_checkm_taxonomy.txt
tests_data/outdir_fasta/: MetaTOR_2_0.fa
tests_data/outdir_pipeline/: bin_summary.txt  binning.txt  contig_data_final.txt  metator_00005_00000.fa.fxi  network.txt  overlapping_micomplete_results.txt  recursive_micomplete_step_1.txt
tests_data/outdir_validation/: assembly_val.fa.fxi  contig_data_final.txt  contig_data_rec.txt  network.txt  overlapping_checkm_results.txt  overlapping_micomplete_results.txt
tests_data/overlapping_bin/: metator_00001_00000.fa  metator_00002_00000.fa  metator_00003_00000.fa  metator_00004_00000.fa  metator_00006_00000.fa  metator_00007_00000.fa  metator_00008_00000.fa  metator_00009_00000.fa  metator_00011_00000.fa  metator_00013_00000.fa  metator_00015_00000.fa  metator_00016_00000.fa  metator_00018_00000.fa  metator_00020_00000.fa  metator_00022_00000.fa  metator_00024_00000.fa  metator_00025_00000.fa  metator_00026_00000.fa  metator_00029_00000.fa  metator_00031_00000.fa  (+20 more)
(+42 files in other folders)
